tests/bad/value_enums/constructor_wrong_types.oc
/// fail: Expected `y` with type str, but got u32

enum Foo {
    Case0(x: i32)
    Case1(y: str, x: i32)
    Case2(y: str)
    Case3
}

def main() {
    let foo: Foo = Case2(7)
}